<resources>
    <string name="app_name">Groom Reader</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="Camera">Swap camera</string>
    <string name="flash">Flash</string>
    <string name="sign_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="valid_sign_in">Successful connection</string>
    <string name="valid_log_out">You are now disconnected</string>
    <string name="status">Connection status</string>
    <string name="infos">Account information</string>
    <string name="expiration">Token\'s expiry</string>
    <string name="revoked">Ticket cancelled</string>
    <string name="invalid">Invalid ticket</string>
    <string name="by_id">By id</string>
    <string name="by_name">By name</string>
    <string name="search_result">Search result</string>

    <string name="dialog_message">Insert a ticket ID:</string>
    <string name="dialog_title">Manual scan</string>
    <string name="cancel">Cancel</string>

    <string name="isconnected">Log as</string>
    <string name="connected">Connected</string>
    <string name="notconnected">You are not logged in</string>

    <string name="sync_success">Synchronization complete</string>
    <string name="sync_failed">Synchronization failed</string>

    <string name="service_failure">Service onFailure callback</string>

    <string name="verif_failed">Verification failed (not connected)</string>

    <!-- PUBLIC KEY -->
    <string name="public_key">MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEASezeQmkN3NVL6PcfGXv0lkftLh0
        8tf70W+j7KwmWO5y1rygtEODKb5dyvj/63NEwzon3zLOAwqOTPwxC59pyQ==</string>

    <!-- Yoshimi -->
    <string name="client_id">kD8Q05MMCFWnwxxFKW5oW4PVluAmzhy1603DBNE6OdLOgmdWiFSWOaeR</string>
    <string name="authorize_endpoint">https://www.wapitisen.fr/sso/oauth/authorize</string>
    <string name="redirect_uri">https://tickets.gala-isen.fr/login_return</string>
    <string name="yoshimi">Yoshimi</string>
    <string name="yoshimi_token">Yoshimi token</string>
    <string name="access_token">Access token</string>
    <string name="yoshimi_issuer">https://www.wapitisen.fr</string>
    <string name="yoshimi_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuINbLPfPI10l+tzNpaMH
        9Hwp63zKDNrEioMVpd0V5BG2m0+WaWjA47D+yEOzpbP1fK8440rTMmDBRiHyB2yj
        M9QP+rz6gUfhE5O+F/Q887hpXf8GMgfSSyYPBVNYLa/7lRWK0Q3xUMLnwhlK9Ncc
        E0k4VsLmHybcY36paV1388hAOM+H+7vv8yTX7bsvYcgshxpaUVUAQhb+ivQWMewm
        kKxqbhFmrJscJE7WJZFBvT+R8MWH83hZaISAZHR92ZO+53CuPYFBsUxX4kk8f5Nd
        DXZqdpmIfKgQmzLAzmLfICrPZF7gQlZk/lIpipdH1jjbgIgHXUq6RyKb6w1qhtw9
        7QIDAQAB</string>

    <!-- SCANNER -->
    <string name="scanner">Scanner</string>
    <string name="check">Check</string>
    <string name="wrong_QR_Code">Invalid QR Code</string>

    <!-- RESULT -->
    <string name="scanner_result">Result</string>
    <string name="scanner_manual">Manual</string>
    <string name="manual_result">Manual result</string>
    <string name="access_granted">Access granted</string>
    <string name="access_unchecked">Access unchecked</string>
    <string name="access_denied">Access denied</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="ticket_id">ID</string>
    <string name="validate">Validate</string>
    <string name="order_failed">Order request failed</string>
    <string name="already_used">Ticket already used</string>

    <string name="ticket_info">Ticket information</string>
    <string name="event_info">Event information</string>
    <string name="events_title">Events</string>
    <string name="event_address">Address</string>
    <string name="products_title">Products</string>

    <string name="product_name_label">Product</string>
    <string name="product_price_label">Price</string>
    <string name="event_place">Place</string>

    <string name="separator">_____________</string>

    <string name="not_found">Ticket not found</string>
    <string name="server_error">Unexpected status code from server</string>
    <string name="server_error_code">Server error: status code </string>
    <string name="couldnt_check">Couldn\'t check ticket reuse</string>
    <string name="reach_server">Couldn\'t reach server, please check network availability</string>
    <string name="last_sync">Last sync</string>
    <string name="groom_sync">GROOM_SYNC</string>

    <string name="auth_failed">Authentication check failed</string>
    <string name="net_failure">Network failure on login</string>
    <string name="no_admin">Authentication failed, user has no admin privileges</string>

    <string name="order_revoked">ORDER_REVOKED</string>
    <string name="ticket_used">TICKET_USED</string>

    <string name="sync_status">Synchronization status</string>
    <string name="sync_last">Last synchronization:</string>
    <string name="events">Events:</string>
    <string name="products">Products:</string>
    <string name="never_sync">Never</string>
    <string name="search_lastname">Search lastname</string>
    <string name="search_message">Insert a lastname</string>
    <string name="search">Search</string>
    <string name="no_result">No results found.</string>

    <string name="bnav_home">Home</string>
    <string name="bnav_scan">Scan</string>
    <string name="bnav_account">Account</string>
</resources>
