<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/dialog_title"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:id="@+id/dialog_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_message"
            android:id="@+id/dialog_message" />

        <EditText
            android:id="@+id/dialog_lastname"
            android:inputType="textPersonName"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:hint="@string/lastname" />

    </LinearLayout>

</LinearLayout>