<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="#212121"
    android:id="@+id/cv"
    android:layout_margin="5dp"
    card_view:cardElevation="7dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_id_view"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text="@string/ticket_id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_name_view"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:text="@string/product_name_label"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price_view"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/product_price_label"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>



</android.support.v7.widget.CardView>