<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/account_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:src="@drawable/groom"
            android:tint="@color/textColor"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"/>


        <com.victor.loading.rotate.RotateLoading
            android:id="@+id/progress_account_information"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:loading_width="3dp"
            app:loading_color="@color/colorAccent"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_gravity="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:id="@+id/sign_status" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infos"
            android:layout_gravity="center"
            android:textColor="@color/textColor"
            android:id="@+id/sign_infos" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:background="@color/colorAccent"
            android:textColor="@color/whiteText"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:id="@+id/sign_in_button" />

    </LinearLayout>

</RelativeLayout>
