<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/event_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_event">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#212121"
            android:id="@+id/event_place"
            android:layout_margin="5dp"
            app:cardElevation="7dp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_place"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_place"
                    android:id="@+id/a_event_place"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:textColor="#fff"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_address"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_address"
                    android:id="@+id/a_event_address"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:textColor="#fff"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/products_title"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:textAllCaps="true"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/products_view"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

